fixed too much header space in ios safari.

--- a/src/main/java/com/googlecode/mgwt/ui/client/theme/ios7/css/header.css
+++ b/src/main/java/com/googlecode/mgwt/ui/client/theme/ios7/css/header.css
@@ -5,11 +5,15 @@
 	background-color: #f8f8f8;
 }
 
-@if ios.version ios7_higher {
-	.mgwt-HeaderPanel {
-		padding-top: 20px;
+@if phonegap.env yes {
+	@if ios.version ios7_higher {
+		.mgwt-HeaderPanel {
+			padding-top: 20px;
+		}
 	}
 }
+
+
 
 .mgwt-HeaderPanel-left {
 	position: absolute;
